[gd_scene load_steps=11 format=3 uid="uid://b0bppkwe8w8mt"]

[ext_resource type="Script" uid="uid://7b2y0oeoimmy" path="res://scripts/menu.gd" id="1_con2f"]
[ext_resource type="Texture2D" uid="uid://do5f6osiwuwmu" path="res://assets/Screenshot 2025-11-03 133550.png" id="1_yqeox"]
[ext_resource type="Theme" uid="uid://530mfykytx07" path="res://themes/menu.tres" id="2_vjb58"]
[ext_resource type="Texture2D" uid="uid://dp26iuujqr2n6" path="res://assets/textures/Metal viejo.jpg" id="3_v86rl"]
[ext_resource type="Script" uid="uid://ctsdyiijrxt83" path="res://scripts/audio_control.gd" id="4_4ytvr"]
[ext_resource type="Texture2D" uid="uid://ddf5t2n1pxjt7" path="res://assets/textures/material_metallicRoughness_rough.jpg" id="5_13sgg"]
[ext_resource type="Script" uid="uid://cnuct1024kfyd" path="res://scripts/full_screen_control.gd" id="5_g3eks"]
[ext_resource type="AudioStream" uid="uid://d0358gt4ei4ty" path="res://assets/audio/Examen Bucle.ogg" id="8_13sgg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_con2f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v86rl"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_con2f")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -113.0
offset_top = 2.0
offset_right = 2027.0
offset_bottom = 1076.0
texture = ExtResource("1_yqeox")

[node name="MainButtons" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_con2f")

[node name="TextureRect_Menu" type="TextureRect" parent="MainButtons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.818
anchor_top = 0.5
anchor_right = 0.818
anchor_bottom = 0.5
offset_left = -626.56006
offset_top = -197.0
offset_right = -0.5600586
offset_bottom = 220.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_v86rl")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainButtons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.046000004
anchor_top = 0.83500004
anchor_right = 0.046000004
anchor_bottom = 0.83500004
offset_left = 0.6799927
offset_top = -331.80005
offset_right = 416.68
offset_bottom = 0.19995117
grow_vertical = 0
localize_numeral_system = false

[node name="Play" type="Button" parent="MainButtons/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 100
text = "PLAY"

[node name="Settings" type="Button" parent="MainButtons/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 100
text = "SETTINGS"

[node name="Exit" type="Button" parent="MainButtons/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 100
text = "EXIT"

[node name="Panel_Logros" type="Button" parent="MainButtons"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Options" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_v86rl")

[node name="TextureRect_Options" type="TextureRect" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.78900003
anchor_top = 0.5
anchor_right = 0.78900003
anchor_bottom = 0.5
offset_left = -511.88013
offset_top = -303.0
offset_right = 0.11987305
offset_bottom = 209.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("5_13sgg")

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.038000003
anchor_top = 0.165
anchor_right = 0.038000003
anchor_bottom = 0.165
offset_left = 0.039993286
offset_top = -0.2000122
offset_right = 359.03998
offset_bottom = 107.79999
theme = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 100
text = "OPTIONS"

[node name="Back" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.95400006
anchor_top = 0.87500006
anchor_right = 0.95400006
anchor_bottom = 0.87500006
offset_left = -194.68005
offset_top = -108.00006
offset_right = 0.3199463
offset_bottom = -6.1035156e-05
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 100
text = "Back"

[node name="VBoxContainer" type="GridContainer" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.083000004
anchor_top = 0.5
anchor_right = 0.083000004
anchor_bottom = 0.5
offset_left = 0.63998413
offset_top = -82.0
offset_right = 517.64
offset_bottom = 174.0
grow_vertical = 2
columns = 2

[node name="AudioMaster_Label" type="Label" parent="Options/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 55
text = "Volume"

[node name="AudioMasterControl" type="HSlider" parent="Options/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_vjb58")
script = ExtResource("4_4ytvr")

[node name="AudioSFX_Label" type="Label" parent="Options/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 55
text = "SFX"

[node name="AudioSFXControl" type="HSlider" parent="Options/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_vjb58")

[node name="FullScreen_Label" type="Label" parent="Options/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 55
text = "Fullscreen Mode"

[node name="FullScreenControl" type="CheckButton" parent="Options/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("5_g3eks")

[node name="ExamSoundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_13sgg")
autoplay = true
bus = &"Music"

[connection signal="button_down" from="MainButtons/VBoxContainer/Play" to="." method="_on_play_button_down"]
[connection signal="pressed" from="MainButtons/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainButtons/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="Options/VBoxContainer/AudioMasterControl" to="Options/VBoxContainer/AudioMasterControl" method="_on_value_changed"]
[connection signal="toggled" from="Options/VBoxContainer/FullScreenControl" to="Options/VBoxContainer/FullScreenControl" method="_on_toggled"]
